get route and city passeds
